[package]
name = "pcrextend"
version = "0.1.0"
authors = ["Lily Sturmann <lsturman@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tss-esapi = { git = "https://github.com/parallaxsecond/rust-tss-esapi" }
